<resources>
    <string name="app_name">TechJam</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="user_info">User Info</string>
    <string name="upload_video">Upload Video</string>
    <string name="logout">Logout</string>
    <string name="welcome_message">Welcome %1$s</string>
    <string name="send_verification_email">Send Verification Email</string>
</resources>